# pyrepo-cookiecutter

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
hooks/: post_gen_project.py  pre_gen_project.py
pyrepo/: README.md  setup.cfg  setup.py
pyrepo/.github/: ISSUE_TEMPLATE.md
tests/: test_bake_project.py
{{cookiecutter.project_name}}/: .github_changelog_generator  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_name}}/.github/: TEST_FAIL_TEMPLATE.md
{{cookiecutter.project_name}}/.github/workflows/: ci.yml  cron.yml  cython.yml
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_name}}/tests/: test_setup.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __init__.py
