
[metadata]
name = pyrepo-cookiecutter
author = Talley Lambert
author_email = talley.lambert@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD
license_file = LICENSE

    
[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, docs/, build/, dist/

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true