[metadata]
name = pyrepo_cookiecutter
long_description = file: README.md
long_description_content_type = text/markdown
author = Talley Lambert
author_email = talley.lambert@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License

[flake8]
max-line-length = 99
doctests = True
exclude = .git, .eggs, __pycache__, docs/, build/, dist/

[mypy]
disallow_any_decorated = false
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true

[tool:pytest]
norecursedirs = "{{cookiecutter.project_name}}"
