{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
} %}
[metadata]
name = {{cookiecutter.project_name}}
url = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_name}}
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}{% if cookiecutter.version_control == 'bump2version' %}
version = 0.0.1{%- endif %}
description = {{ cookiecutter.project_short_description }}
long_description = file: README.md
long_description_content_type = text/markdown
license = {{ cookiecutter.license }}
classifiers =
    Development Status :: 2 - Pre-Alpha
{%- if cookiecutter.license in license_classifiers %}
    {{ license_classifiers[cookiecutter.license] }}
{%- endif %}
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source Code =https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_name}}

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
{% if cookiecutter.version_control == 'setuptools-scm' -%}
setup_requires =
    setuptools_scm
{%- endif %}
; install_requires =
    ; numpy

[options.extras_require]
testing =
    tox
    tox-conda
    pytest
    pytest-cov
dev =
    ipython
    jedi<0.18.0
    black
    flake8
    flake8-docstrings
    isort
    mypy
    pre-commit
    pydocstyle
    pytest
{% if cookiecutter.version_control == 'bump2version' -%}
    bumpversion{% endif %}

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore =  D100, D213, D401, D413, D107, W503

[isort]
profile = black
src_paths = {{cookiecutter.project_slug}}

[pydocstyle]
match_dir = {{cookiecutter.project_slug}}
convention = numpy
add_select = D402,D415,D417
ignore = D100, D213, D401, D413, D107

[tool:pytest]
addopts = -W error

[mypy]
files = {{cookiecutter.project_slug}}
warn_unused_configs = True
warn_unused_ignores = True
check_untyped_defs = True
implicit_reexport = False
# this is strict!
# disallow_untyped_defs = True
show_column_numbers = True
show_error_codes = True
ignore_missing_imports = True

{% if cookiecutter.version_control == 'bump2version' -%}
[bumpversion]
current_version = '0.0.1'
commit = True
tag = True

[bumpversion:file:setup.cfg]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:{{ cookiecutter.project_slug }}/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'
{%- endif %}
